--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "nodemon",
-    "build": "rm -rf dist && tsc",
-    "lint": "eslint --ext .ts ./",
-    "ts-check": "tsc --noEmit -p  .",
-    "test": "npm run build && jest --testPathPattern=dist",
-    "pre-commit-message": "echo 'Please wait, running pre-commit checks...' && exit 0",
-    "pre-commit": "npm-run-all lint ts-check test",
-    "prepare": "[ -d './.husky' ] && husky install"
+    "build": "rm -rf dist && tsc"
   },
   "files": [
     "dist",
